// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Integration Files > edge cases for @astrojs/cloudflare > should match snapshot for complex relative paths > router for @astrojs/cloudflare with complex relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../../src/server/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files > edge cases for @astrojs/node > should match snapshot for complex relative paths > router for @astrojs/node with complex relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../../src/server/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files > edge cases for @astrojs/vercel > should match snapshot for complex relative paths > router for @astrojs/vercel with complex relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../../src/server/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files > generateHonoClient > should match snapshot > getHonoClient 1`] = `
"
// Generated by Hono Actions Integration
import type { HonoRouter } from './router.js'
import { parseResponse, hc } from 'hono/client'
import type { DetailedError, ClientRequestOptions } from 'hono/client'

function getBaseUrl() {
    // client side can just use the origin
    if (typeof window !== 'undefined') {
        return window.location.origin
    }

    // dev server (dev server) needs to know the port
    if (import.meta.env.DEV) {
        return 'http://localhost:3000'
    }

    // server side (production) needs full url
    if (import.meta.env.SITE) {
        return import.meta.env.SITE
    }

    return '/'
}

export { parseResponse }
export type { DetailedError, ClientRequestOptions, HonoRouter }
export const honoClient = createHonoClient<HonoRouter>(getBaseUrl())
export function createHonoClient<T extends HonoRouter = HonoRouter>(basePath: string, fetchOptions?: ClientRequestOptions) {
    return hc<T>(basePath, fetchOptions)
}
"
`;

exports[`Integration Files > generateIntegrationTypes for @astrojs/cloudflare > should match snapshot for actionTypes > actionTypes for @astrojs/cloudflare 1`] = `
"
// Generated by Hono Actions Integration
// keeping separate from the main types.d.ts to avoid clobbering package exports
declare module '@gnosticdev/hono-actions/actions' {
    interface Bindings extends Env { ASTRO_LOCALS: App.Locals }
    interface Variables { [key: string]: unknown }
    interface HonoEnv { Bindings: Bindings, Variables: Variables }
}
export {}
"
`;

exports[`Integration Files > generateIntegrationTypes for @astrojs/cloudflare > should match snapshot for clientTypes > clientTypes for @astrojs/cloudflare 1`] = `
"
// Generated by Hono Actions Integration
declare module '@gnosticdev/hono-actions/client' {
    /**
     * Default hono client using the base url from the environment
     * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
     * If customization is needed, use the \`createHonoClient\` function instead.
     */
    export const honoClient: typeof import('./client').honoClient
    /**
     * Helper function to parse the response from the Hono client
     */
    export const parseResponse: typeof import('./client').parseResponse
    /**
     * Create a new hono client with custom base url + fetch options
     */
    export const createHonoClient: typeof import('./client').createHonoClient
    export type DetailedError = import('./client').DetailedError
    export type ClientRequestOptions = import('./client').ClientRequestOptions
    /**
     * The hono actions routes. for use in the hono client
     */
    export type HonoRouter = import('./client').HonoRouter
}

type Runtime = import('@astrojs/cloudflare').Runtime<Env>

declare namespace App {
    interface Locals extends Runtime {}
}
"
`;

exports[`Integration Files > generateIntegrationTypes for @astrojs/netlify > should match snapshot for actionTypes > actionTypes for @astrojs/netlify 1`] = `
"
    // Generated by Hono Actions Integration
    declare module '@gnosticdev/hono-actions/actions' {
        interface Bindings { [key: string]: unknown }
        interface Variables { [key: string]: unknown }
        interface HonoEnv { Bindings: Bindings, Variables: Variables }
    }
    export {}
    "
`;

exports[`Integration Files > generateIntegrationTypes for @astrojs/netlify > should match snapshot for clientTypes > clientTypes for @astrojs/netlify 1`] = `
"
// Generated by Hono Actions Integration
declare module '@gnosticdev/hono-actions/client' {
    /**
     * Default hono client using the base url from the environment
     * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
     * If customization is needed, use the \`createHonoClient\` function instead.
     */
    export const honoClient: typeof import('./client').honoClient
    /**
     * Helper function to parse the response from the Hono client
     */
    export const parseResponse: typeof import('./client').parseResponse
    /**
     * Create a new hono client with custom base url + fetch options
     */
    export const createHonoClient: typeof import('./client').createHonoClient
    export type DetailedError = import('./client').DetailedError
    export type ClientRequestOptions = import('./client').ClientRequestOptions
    /**
     * The hono actions routes. for use in the hono client
     */
    export type HonoRouter = import('./client').HonoRouter
}
"
`;

exports[`Integration Files > generateIntegrationTypes for @astrojs/node > should match snapshot for actionTypes > actionTypes for @astrojs/node 1`] = `
"
    // Generated by Hono Actions Integration
    declare module '@gnosticdev/hono-actions/actions' {
        interface Bindings { [key: string]: unknown }
        interface Variables { [key: string]: unknown }
        interface HonoEnv { Bindings: Bindings, Variables: Variables }
    }
    export {}
    "
`;

exports[`Integration Files > generateIntegrationTypes for @astrojs/node > should match snapshot for clientTypes > clientTypes for @astrojs/node 1`] = `
"
// Generated by Hono Actions Integration
declare module '@gnosticdev/hono-actions/client' {
    /**
     * Default hono client using the base url from the environment
     * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
     * If customization is needed, use the \`createHonoClient\` function instead.
     */
    export const honoClient: typeof import('./client').honoClient
    /**
     * Helper function to parse the response from the Hono client
     */
    export const parseResponse: typeof import('./client').parseResponse
    /**
     * Create a new hono client with custom base url + fetch options
     */
    export const createHonoClient: typeof import('./client').createHonoClient
    export type DetailedError = import('./client').DetailedError
    export type ClientRequestOptions = import('./client').ClientRequestOptions
    /**
     * The hono actions routes. for use in the hono client
     */
    export type HonoRouter = import('./client').HonoRouter
}
"
`;

exports[`Integration Files > generateIntegrationTypes for @astrojs/vercel > should match snapshot for actionTypes > actionTypes for @astrojs/vercel 1`] = `
"
    // Generated by Hono Actions Integration
    declare module '@gnosticdev/hono-actions/actions' {
        interface Bindings { [key: string]: unknown }
        interface Variables { [key: string]: unknown }
        interface HonoEnv { Bindings: Bindings, Variables: Variables }
    }
    export {}
    "
`;

exports[`Integration Files > generateIntegrationTypes for @astrojs/vercel > should match snapshot for clientTypes > clientTypes for @astrojs/vercel 1`] = `
"
// Generated by Hono Actions Integration
declare module '@gnosticdev/hono-actions/client' {
    /**
     * Default hono client using the base url from the environment
     * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
     * If customization is needed, use the \`createHonoClient\` function instead.
     */
    export const honoClient: typeof import('./client').honoClient
    /**
     * Helper function to parse the response from the Hono client
     */
    export const parseResponse: typeof import('./client').parseResponse
    /**
     * Create a new hono client with custom base url + fetch options
     */
    export const createHonoClient: typeof import('./client').createHonoClient
    export type DetailedError = import('./client').DetailedError
    export type ClientRequestOptions = import('./client').ClientRequestOptions
    /**
     * The hono actions routes. for use in the hono client
     */
    export type HonoRouter = import('./client').HonoRouter
}
"
`;

exports[`Integration Files > generateRouter for @astrojs/cloudflare > should match snapshot for custom base path > router for @astrojs/cloudflare with custom base path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('./actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api/v1'>>().basePath('/api/v1')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files > generateRouter for @astrojs/cloudflare > should match snapshot for custom relative path > router for @astrojs/cloudflare with custom relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../src/hono/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files > generateRouter for @astrojs/cloudflare > should match snapshot for default router > router for @astrojs/cloudflare 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files > generateRouter for @astrojs/netlify > should match snapshot for custom base path > router for @astrojs/netlify with custom base path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'
import { handle } from 'hono/netlify'

async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('./actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api/v1'>>().basePath('/api/v1')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default handle(app)"
`;

exports[`Integration Files > generateRouter for @astrojs/netlify > should match snapshot for custom relative path > router for @astrojs/netlify with custom relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'
import { handle } from 'hono/netlify'

async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../src/hono/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default handle(app)"
`;

exports[`Integration Files > generateRouter for @astrojs/netlify > should match snapshot for default router > router for @astrojs/netlify 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'
import { handle } from 'hono/netlify'

async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default handle(app)"
`;

exports[`Integration Files > generateRouter for @astrojs/node > should match snapshot for custom base path > router for @astrojs/node with custom base path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('./actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api/v1'>>().basePath('/api/v1')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files > generateRouter for @astrojs/node > should match snapshot for custom relative path > router for @astrojs/node with custom relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../src/hono/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files > generateRouter for @astrojs/node > should match snapshot for default router > router for @astrojs/node 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files > generateRouter for @astrojs/vercel > should match snapshot for custom base path > router for @astrojs/vercel with custom base path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('./actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api/v1'>>().basePath('/api/v1')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files > generateRouter for @astrojs/vercel > should match snapshot for custom relative path > router for @astrojs/vercel with custom relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../src/hono/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files > generateRouter for @astrojs/vercel > should match snapshot for default router > router for @astrojs/vercel 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files > getAstroHandler for @astrojs/cloudflare > should match snapshot > handler for @astrojs/cloudflare 1`] = `
"
/// <reference types="./types.d.ts" />
// Generated by Hono Actions Integration
// adapter: @astrojs/cloudflare
import type { APIContext, APIRoute } from 'astro'
import router from './router.js'

const handler: APIRoute<APIContext> = async (ctx) => {
    return router.fetch(
        ctx.request,
        ctx.locals.runtime.env, // required for cloudflare adapter
        ctx.locals.runtime.ctx, // required for cloudflare adapter
    )
}

export { handler as ALL }
"
`;

exports[`Integration Files > getAstroHandler for @astrojs/netlify > should match snapshot > handler for @astrojs/netlify 1`] = `
"
/// <reference types="./types.d.ts" />
// Generated by Hono Actions Integration
// adapter: @astrojs/netlify
import type { APIContext, APIRoute } from 'astro'
import netlifyHandler from './router.js'

const handler: APIRoute<APIContext> = async (ctx) => {
    return netlifyHandler(ctx.request, ctx)
}

export { handler as ALL }
"
`;

exports[`Integration Files > getAstroHandler for @astrojs/node > should match snapshot > handler for @astrojs/node 1`] = `
"
/// <reference types="./types.d.ts" />
// Generated by Hono Actions Integration
// adapter: @astrojs/node
import type { APIContext, APIRoute } from 'astro'
import router from './router.js'

const handler: APIRoute<APIContext> = async (ctx) => {
    return router.fetch(
        ctx.request,
    )
}

export { handler as ALL }
"
`;

exports[`Integration Files > getAstroHandler for @astrojs/vercel > should match snapshot > handler for @astrojs/vercel 1`] = `
"
/// <reference types="./types.d.ts" />
// Generated by Hono Actions Integration
// adapter: @astrojs/vercel
import type { APIContext, APIRoute } from 'astro'
import router from './router.js'

const handler: APIRoute<APIContext> = async (ctx) => {
    return router.fetch(
        ctx.request,
    )
}

export { handler as ALL }
"
`;

exports[`Integration Files edge cases for @astrojs/cloudflare should match snapshot for complex relative paths: router for @astrojs/cloudflare with complex relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../../src/server/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files edge cases for @astrojs/node should match snapshot for complex relative paths: router for @astrojs/node with complex relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../../src/server/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files edge cases for @astrojs/vercel should match snapshot for complex relative paths: router for @astrojs/vercel with complex relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../../src/server/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files generateHonoClient should match snapshot: getHonoClient 1`] = `
"
// Generated by Hono Actions Integration
import type { HonoRouter } from './router.js'
import { parseResponse, hc } from 'hono/client'
import type { DetailedError, ClientRequestOptions } from 'hono/client'

function getBaseUrl() {
    // client side can just use the origin
    if (typeof window !== 'undefined') {
        return window.location.origin
    }

    // dev server (dev server) needs to know the port
    if (import.meta.env.DEV) {
        return 'http://localhost:3000'
    }

    // server side (production) needs full url
    if (import.meta.env.SITE) {
        return import.meta.env.SITE
    }

    return '/'
}

export { parseResponse }
export type { DetailedError, ClientRequestOptions, HonoRouter }
export const honoClient = createHonoClient<HonoRouter>(getBaseUrl())
export function createHonoClient<T extends HonoRouter = HonoRouter>(basePath: string, fetchOptions?: ClientRequestOptions) {
    return hc<T>(basePath, fetchOptions)
}
"
`;

exports[`Integration Files generateIntegrationTypes for @astrojs/cloudflare should match snapshot for actionTypes: actionTypes for @astrojs/cloudflare 1`] = `
"
// Generated by Hono Actions Integration
// keeping separate from the main types.d.ts to avoid clobbering package exports
declare module '@gnosticdev/hono-actions/actions' {
    interface Bindings extends Env { ASTRO_LOCALS: App.Locals }
    interface Variables { [key: string]: unknown }
    interface HonoEnv { Bindings: Bindings, Variables: Variables }
}
export {}
"
`;

exports[`Integration Files generateIntegrationTypes for @astrojs/cloudflare should match snapshot for clientTypes: clientTypes for @astrojs/cloudflare 1`] = `
"
// Generated by Hono Actions Integration
declare module '@gnosticdev/hono-actions/client' {
    /**
     * Default hono client using the base url from the environment
     * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
     * If customization is needed, use the \`createHonoClient\` function instead.
     */
    export const honoClient: typeof import('./client').honoClient
    /**
     * Helper function to parse the response from the Hono client
     */
    export const parseResponse: typeof import('./client').parseResponse
    /**
     * Create a new hono client with custom base url + fetch options
     */
    export const createHonoClient: typeof import('./client').createHonoClient
    export type DetailedError = import('./client').DetailedError
    export type ClientRequestOptions = import('./client').ClientRequestOptions
    /**
     * The hono actions routes. for use in the hono client
     */
    export type HonoRouter = import('./client').HonoRouter
}

type Runtime = import('@astrojs/cloudflare').Runtime<Env>

declare namespace App {
    interface Locals extends Runtime {}
}
"
`;

exports[`Integration Files generateIntegrationTypes for @astrojs/netlify should match snapshot for actionTypes: actionTypes for @astrojs/netlify 1`] = `
"
    // Generated by Hono Actions Integration
    declare module '@gnosticdev/hono-actions/actions' {
        interface Bindings { [key: string]: unknown }
        interface Variables { [key: string]: unknown }
        interface HonoEnv { Bindings: Bindings, Variables: Variables }
    }
    export {}
    "
`;

exports[`Integration Files generateIntegrationTypes for @astrojs/netlify should match snapshot for clientTypes: clientTypes for @astrojs/netlify 1`] = `
"
// Generated by Hono Actions Integration
declare module '@gnosticdev/hono-actions/client' {
    /**
     * Default hono client using the base url from the environment
     * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
     * If customization is needed, use the \`createHonoClient\` function instead.
     */
    export const honoClient: typeof import('./client').honoClient
    /**
     * Helper function to parse the response from the Hono client
     */
    export const parseResponse: typeof import('./client').parseResponse
    /**
     * Create a new hono client with custom base url + fetch options
     */
    export const createHonoClient: typeof import('./client').createHonoClient
    export type DetailedError = import('./client').DetailedError
    export type ClientRequestOptions = import('./client').ClientRequestOptions
    /**
     * The hono actions routes. for use in the hono client
     */
    export type HonoRouter = import('./client').HonoRouter
}
"
`;

exports[`Integration Files generateIntegrationTypes for @astrojs/node should match snapshot for actionTypes: actionTypes for @astrojs/node 1`] = `
"
    // Generated by Hono Actions Integration
    declare module '@gnosticdev/hono-actions/actions' {
        interface Bindings { [key: string]: unknown }
        interface Variables { [key: string]: unknown }
        interface HonoEnv { Bindings: Bindings, Variables: Variables }
    }
    export {}
    "
`;

exports[`Integration Files generateIntegrationTypes for @astrojs/node should match snapshot for clientTypes: clientTypes for @astrojs/node 1`] = `
"
// Generated by Hono Actions Integration
declare module '@gnosticdev/hono-actions/client' {
    /**
     * Default hono client using the base url from the environment
     * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
     * If customization is needed, use the \`createHonoClient\` function instead.
     */
    export const honoClient: typeof import('./client').honoClient
    /**
     * Helper function to parse the response from the Hono client
     */
    export const parseResponse: typeof import('./client').parseResponse
    /**
     * Create a new hono client with custom base url + fetch options
     */
    export const createHonoClient: typeof import('./client').createHonoClient
    export type DetailedError = import('./client').DetailedError
    export type ClientRequestOptions = import('./client').ClientRequestOptions
    /**
     * The hono actions routes. for use in the hono client
     */
    export type HonoRouter = import('./client').HonoRouter
}
"
`;

exports[`Integration Files generateIntegrationTypes for @astrojs/vercel should match snapshot for actionTypes: actionTypes for @astrojs/vercel 1`] = `
"
    // Generated by Hono Actions Integration
    declare module '@gnosticdev/hono-actions/actions' {
        interface Bindings { [key: string]: unknown }
        interface Variables { [key: string]: unknown }
        interface HonoEnv { Bindings: Bindings, Variables: Variables }
    }
    export {}
    "
`;

exports[`Integration Files generateIntegrationTypes for @astrojs/vercel should match snapshot for clientTypes: clientTypes for @astrojs/vercel 1`] = `
"
// Generated by Hono Actions Integration
declare module '@gnosticdev/hono-actions/client' {
    /**
     * Default hono client using the base url from the environment
     * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
     * If customization is needed, use the \`createHonoClient\` function instead.
     */
    export const honoClient: typeof import('./client').honoClient
    /**
     * Helper function to parse the response from the Hono client
     */
    export const parseResponse: typeof import('./client').parseResponse
    /**
     * Create a new hono client with custom base url + fetch options
     */
    export const createHonoClient: typeof import('./client').createHonoClient
    export type DetailedError = import('./client').DetailedError
    export type ClientRequestOptions = import('./client').ClientRequestOptions
    /**
     * The hono actions routes. for use in the hono client
     */
    export type HonoRouter = import('./client').HonoRouter
}
"
`;

exports[`Integration Files generateRouter for @astrojs/cloudflare should match snapshot for custom base path: router for @astrojs/cloudflare with custom base path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('./actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api/v1'>>().basePath('/api/v1')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files generateRouter for @astrojs/cloudflare should match snapshot for custom relative path: router for @astrojs/cloudflare with custom relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../src/hono/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files generateRouter for @astrojs/cloudflare should match snapshot for default router: router for @astrojs/cloudflare 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files generateRouter for @astrojs/netlify should match snapshot for custom base path: router for @astrojs/netlify with custom base path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'
import { handle } from 'hono/netlify'

async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('./actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api/v1'>>().basePath('/api/v1')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default handle(app)"
`;

exports[`Integration Files generateRouter for @astrojs/netlify should match snapshot for custom relative path: router for @astrojs/netlify with custom relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'
import { handle } from 'hono/netlify'

async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../src/hono/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default handle(app)"
`;

exports[`Integration Files generateRouter for @astrojs/netlify should match snapshot for default router: router for @astrojs/netlify 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'
import { handle } from 'hono/netlify'

async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default handle(app)"
`;

exports[`Integration Files generateRouter for @astrojs/node should match snapshot for custom base path: router for @astrojs/node with custom base path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('./actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api/v1'>>().basePath('/api/v1')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files generateRouter for @astrojs/node should match snapshot for custom relative path: router for @astrojs/node with custom relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../src/hono/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files generateRouter for @astrojs/node should match snapshot for default router: router for @astrojs/node 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files generateRouter for @astrojs/vercel should match snapshot for custom base path: router for @astrojs/vercel with custom base path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('./actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api/v1'>>().basePath('/api/v1')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files generateRouter for @astrojs/vercel should match snapshot for custom relative path: router for @astrojs/vercel with custom relative path 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../src/hono/actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files generateRouter for @astrojs/vercel should match snapshot for default router: router for @astrojs/vercel 1`] = `
"import type { HonoEnv, MergeActionKeyIntoPath } from '@gnosticdev/hono-actions/actions'
import { Hono } from 'hono'
import { cors } from 'hono/cors'
import { showRoutes } from 'hono/dev'
import { logger } from 'hono/logger'
import { prettyJSON } from 'hono/pretty-json'
import type { ExtractSchema, MergeSchemaPath } from 'hono/types'


async function buildRouter(){
    type ActionsWithKeyedPaths = MergeActionKeyIntoPath<typeof honoActions>
    type ActionSchema = ExtractSchema<ActionsWithKeyedPaths[keyof ActionsWithKeyedPaths]>
    const { honoActions} = await import('../actions')
    const app = new Hono<HonoEnv, MergeSchemaPath<ActionSchema, '/api'>>().basePath('/api')

    app.use('*', cors(), logger(), prettyJSON())

    for (const [routeName, action] of Object.entries(honoActions)) {
        app.route(\`/\${routeName}\`, action)
    }

    return app
}

export type HonoRouter = Awaited<ReturnType<typeof buildRouter>>

const app = await buildRouter()
console.log('------- Hono Routes -------')
showRoutes(app)
console.log('---------------------------')
export default app"
`;

exports[`Integration Files getAstroHandler for @astrojs/cloudflare should match snapshot: handler for @astrojs/cloudflare 1`] = `
"
/// <reference types="./types.d.ts" />
// Generated by Hono Actions Integration
// adapter: @astrojs/cloudflare
import type { APIContext, APIRoute } from 'astro'
import router from './router.js'

const handler: APIRoute<APIContext> = async (ctx) => {
    return router.fetch(
        ctx.request,
        ctx.locals.runtime.env, // required for cloudflare adapter
        ctx.locals.runtime.ctx, // required for cloudflare adapter
    )
}

export { handler as ALL }
"
`;

exports[`Integration Files getAstroHandler for @astrojs/netlify should match snapshot: handler for @astrojs/netlify 1`] = `
"
/// <reference types="./types.d.ts" />
// Generated by Hono Actions Integration
// adapter: @astrojs/netlify
import type { APIContext, APIRoute } from 'astro'
import netlifyHandler from './router.js'

const handler: APIRoute<APIContext> = async (ctx) => {
    return netlifyHandler(ctx.request, ctx)
}

export { handler as ALL }
"
`;

exports[`Integration Files getAstroHandler for @astrojs/node should match snapshot: handler for @astrojs/node 1`] = `
"
/// <reference types="./types.d.ts" />
// Generated by Hono Actions Integration
// adapter: @astrojs/node
import type { APIContext, APIRoute } from 'astro'
import router from './router.js'

const handler: APIRoute<APIContext> = async (ctx) => {
    return router.fetch(
        ctx.request,
    )
}

export { handler as ALL }
"
`;

exports[`Integration Files getAstroHandler for @astrojs/vercel should match snapshot: handler for @astrojs/vercel 1`] = `
"
/// <reference types="./types.d.ts" />
// Generated by Hono Actions Integration
// adapter: @astrojs/vercel
import type { APIContext, APIRoute } from 'astro'
import router from './router.js'

const handler: APIRoute<APIContext> = async (ctx) => {
    return router.fetch(
        ctx.request,
    )
}

export { handler as ALL }
"
`;
